# oshinglish

./: .cpanel.yml  .gitignore  LICENSE  Makefile  README.md  manage.py  poetry-commands.md  pyproject.toml  to-do.md
apps/api/: serializers.py  urls.py  views.py
apps/dictionary/: apps.py  constants.py  drafts.py  forms.py  models.py  processors.py  rest_urls.py  rest_views.py  serializers.py  signals.py  urls.py  views.py
apps/dictionary/migrations/: 0001_initial.py  0002_alter_historicalpartofspeech_example_and_more.py  0003_alter_historicalpartofspeech_code_and_more.py  0004_alter_wordpair_part_of_speech_alter_wordpair_root.py
apps/dictionary/templates/dictionary/: definitionexample_form.html  detail_view.html  english_word_list.html  englishword_form.html  list_view.html  listed_entries.html  navbar.html  oshindonga_idiom_list.html  oshindonga_phonetic_list.html  search.html  (+5 more)
apps/users/: apps.py  forms.py  models.py  signals.py  views.py
apps/users/migrations/: 0001_initial.py
oshinglish/: asgi.py  settings.py  urls.py  views.py  wsgi.py
oshinglish/api/dictionary/: rest_views.py  serializers.py
oshinglish/apps/dictionary/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
oshinglish/apps/users/: urls.py  views.py
oshinglish/templates/: base.html
scripts/: auto_updaters.py  autodict.py
static/css/: oshinglish.css
static/images/: site.webmanifest
static/js/: definition_displayer.js  htmx.min.js
templates/: base.html  dictionary_nav.html  help.html  index.html  primary_nav.html
templates/rest_framework/: _api.html  api.html
(+2 files in other folders)
